--- a/public/less/ssb-site-builder/ssb-sections/ssb-header.less
+++ b/public/less/ssb-site-builder/ssb-sections/ssb-header.less
@@ -93,4 +93,14 @@
             margin-bottom: 0!important;
         }
     });
+
+    .ssb-page-section-layout-header-fixed {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: auto;
+        z-index: 2;
+    }
+
 }
